--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,13 @@
             android:name=".cv_result"
             android:exported="true"
             android:label="Your Resume"
-            android:theme="@style/Theme.CurriculumVitaeV2"
+            android:theme="@style/Theme2"
+            />
+        <activity
+            android:name=".carrerActivity"
+            android:exported="true"
+            android:label="Your Resume"
+            android:theme="@style/Theme2"
             />
 
 
